equalizer-landing-page.css
:root {
  font-size: 62.5%; /* 1rem = 10px */

  --color-blue: hsl(177, 68%, 64%);
  --color-orange: hsl(12, 94%, 65%);
  --color-yellow: hsl(33, 100%, 70%);
  --color-white: hsl(20, 33%, 98%);
  --color-black: hsl(244, 23%, 12%);
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0;

  /* removes default styling from certain elements like button and label */
  font: inherit;

  font-family: "IBM Plex Sans", sans-serif;
  line-height: 1.5;
  word-break: break-word;
}

html {
  scroll-behavior: smooth;
  /* color-scheme: dark light;  */
}

body {
  display: flex;
  justify-content: center;

  min-height: 100vh;

  font-size: 1.6rem;
}

img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
  font-style: italic;
  background-repeat: no-repeat;
  background-size: cover;
  /* background-image: url(low-res-version-of-img.jpg); */
  shape-margin: 1rem;
}

img,
picture,
video,
canvas,
svg {
  /* display: block;
    max-width: 100%; */
  display: block;
  block-size: auto;
  max-inline-size: 100%;
}

ul,
ol {
  list-style: none;
}

a {
  text-decoration: none;
}

/* end of reset.css */
.equalizer-landing-page {
  display: grid;
  justify-content: center;
  align-content: center;

  overflow-x: clip;

  background-color: var(--color-white);

  width: 375px;
}
@media (768px <= width) {
  .equalizer-landing-page {
    width: 768px;
  }
}
@media (1440px <= width) {
  .equalizer-landing-page {
    width: 1440px;
  }
}

.hero {
  position: relative;

  margin: 40px 0 0 24px;

  background-color: transparent;
}
@media (768px <= width) {
  .hero {
    margin: 62px 0 0 39px;
  }
}
@media (1440px <= width) {
  .hero {
    margin-left: 166px;
  }
}

.hero__blur--1,
.hero__blur--2,
.hero__bg-pattern {
  position: absolute;

  display: none;

  z-index: 0;
}

.hero__blur--1 {
  top: -120px;
  right: -100px;

  display: block;
  opacity: 0.75;
  transform: scale(1.5);
}
@media (768px <= width) {
  .hero__blur--1 {
    top: -50px;
    right: -50px;
  }
}

@media (768px <= width) {
  .hero__blur--2 {
    top: -700px;
    left: -400px;

    display: block;
    opacity: 0.75;
    transform: scale(1.5);
  }

  .hero__bg-pattern {
    top: -98px;
    right: -36px;

    display: block;

    width: 266px;
    height: 400px;
  }
}
@media (1440px <= width) {
  .hero__bg-pattern {
    top: -105px;
    right: 0;

    display: block;

    width: 312px;
    height: 468px;
  }
}

.hero__logo {
  margin-bottom: 64px;
  width: 146px;
  height: 32px;
}
@media (768px <= width) {
  .hero__logo {
    margin-bottom: 98px;
  }
}

.hero__text {
  position: relative;

  display: flex;
  flex-direction: column;
  gap: 2rem;

  margin-right: 24px;

  z-index: 1;
}
@media (768px <= width) {
  .hero__text {
    gap: 2.8rem;

    margin-right: 214px;
  }
}
@media (1440px <= width) {
  .hero__text {
    gap: 4rem;

    margin-right: 400px;
  }
}

.hero__text__heading {
  font-size: 4rem;
  font-weight: 700;
  line-height: 1.2; /* 4rem * 1.2 -> 4.8rem */
}
@media (768px <= width) {
  .hero__text__heading {
    font-size: 6.4rem;
    line-height: 1; /* 6.4rem * 1 -> 6.4rem */
  }
}
@media (1440px <= width) {
  .hero__text__heading {
    font-size: 8.8rem;
  }
}

.hero__text__paragraph {
  font-size: 1.6rem;
  line-height: 1.625; /* 1.6rem * 1.625 -> 2.6rem */
}
@media (768px <= width) {
  .hero__text__paragraph {
    font-size: 1.8rem;
    line-height: 1.555; /* 1.8rem * 1.555 -> 2.8rem */
  }
}
@media (1440px <= width) {
  .hero__text__paragraph {
    font-size: 2rem;
    line-height: 1.7; /* 2rem * 1.7 -> 3.4rem */
  }
}

main {
  position: relative;

  margin-top: 68px;
}
@media (768px <= width) {
  main {
    margin: 111px 36px 0;
  }
}
@media (1440px <= width) {
  main {
    margin: 108px 165px 0;
  }
}

.main__phone {
  position: absolute;
  left: calc(50% - 104px);

  width: 208px;
  height: 430px;

  z-index: 2;
}
@media (768px <= width) {
  .main__phone {
    left: 64px;

    width: 270px;
    height: 556px;
  }
}
@media (1440px <= width) {
  .main__phone {
    left: 102px;

    width: 312px;
    height: 642px;
  }
}

.main__black {
  position: relative;

  margin-top: 98px;
  border-radius: 10px;
  height: 600px;

  background-color: var(--color-black);

  z-index: 1;
}
@media (768px <= width) {
  .main__black {
    margin-top: 138px;
  }
}
@media (1440px <= width) {
  .main__black {
    margin-top: 213px;
  }
}

.main__black__bg-pattern {
  margin: auto;
  width: 280px;
  height: 420px;
}
@media (768px <= width) {
  .main__black__bg-pattern {
    position: absolute;
    top: -31px;

    margin-left: 229px;
  }
}
@media (1440px <= width) {
  .main__black__bg-pattern {
    margin-left: 336px;

    width: 312px;
    height: 468px;
  }
}

.main__orange {
  position: relative;
  top: -220px;

  margin-bottom: -220px;
  border-radius: 10px;
  padding: 48px 36px;
  min-height: 546px;

  background-color: var(--color-orange);
  color: var(--color-white);

  z-index: 3;
}
@media (768px <= width) {
  .main__orange {
    top: -450px;

    padding: 48px;
    width: 399px;

    margin: 0 auto -415px 239px;
  }
}
@media (1440px <= width) {
  .main__orange {
    top: -510px;

    padding: 58px 56px;
    width: 446px;

    margin: 0 auto -500px 569px;
  }
}

.main__orange__heading {
  margin-bottom: 1.2rem;

  font-size: 3.2rem;
  font-weight: 700;
  line-height: 1.25; /* 3.2rem * 1.25 -> 4rem */
}
@media (1440px <= width) {
  .main__orange__heading {
    margin-bottom: 2.2rem;

    font-size: 4rem;
    line-height: 1.3; /* 4rem * 1.3 -> 5.2rem */
  }
}

.main__orange__paragraph {
  margin-bottom: 3.2rem;

  font-size: 1.8rem;
  line-height: 1.555; /* 1.8rem * 1.555 -> 2.8rem */
}
@media (1440px <= width) {
  .main__orange__paragraph {
    margin-bottom: 4rem;

    font-size: 2rem;
    line-height: 1.7; /* 2rem * 1.7 -> 3.4rem */
  }
}

.main__orange__price {
  display: flex;
  align-items: center;
  gap: 1.6rem;

  margin-bottom: 3.2rem;

  font-size: 6.5rem;
  line-height: 0.8; /* 6.5rem * 0.8 -> 5.2rem */
  font-weight: 700;
}
@media (1440px <= width) {
  .main__orange__price {
    margin-bottom: 4.6rem;
  }
}
.main__orange__price::after {
  content: " / month";

  font-size: 2rem;
  line-height: 1.6; /* 2rem * 1.6 -> 3.2rem */
  font-weight: 400;
}

.main__orange__buttons {
  display: flex;
  flex-direction: column;
  gap: 16px;

  font-size: 1.8rem;
  font-weight: 700;
  line-height: 1.777; /* 1.8rem * 1.777 -> 3.2rem */
}

.main__orange__buttons--apple,
.main__orange__buttons--android {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;

  border-radius: 10px;
  width: 29.6rem;
  height: 6.1rem;

  cursor: pointer;
}

.main__orange__buttons--apple {
  background-color: var(--color-black);
  color: var(--color-white);
}
.main__orange__buttons--apple:hover {
  background-color: var(--color-blue);
}

.main__orange__buttons--android {
  background-color: var(--color-white);
  color: var(--color-black);
}
.main__orange__buttons--android:hover {
  background-color: var(--color-yellow);
}

.main__blur {
  display: none;

  position: absolute;
}
@media (1440px <= width) {
  .main__blur {
    display: block;

    right: 0px;
    bottom: -100px;

    /* opacity: 0.75; */
    transform: scale(1.5) rotate(-60deg);

    z-index: 0;
  }
}

footer {
  display: grid;
  grid-template-areas:
    "footer__logo"
    "footer__text"
    "footer__icons";

  margin: 64px 24px;
}
@media (768px <= width) {
  footer {
    grid-template-areas:
      "footer__logo ."
      "footer__text footer__icons";
    grid-template-columns: 55% 45%;
  }
}
@media (1440px <= width) {
  footer {
    grid-template-areas: "footer__logo footer__text footer__icons";
    grid-template-columns: 25% 35% 40%;

    margin: 98px 165px 90px;
  }
}

.footer__logo {
  grid-area: footer__logo;

  margin-bottom: 32px;
}

.footer__text {
  grid-area: footer__text;

  margin-bottom: 64px;

  font-size: 1.6rem;
  line-height: 1.625; /* 1.6rem * 1.625 -> 2.6rem */
}
@media (768px <= width) {
  .footer__text {
    margin-bottom: 0;
  }
}

.footer__text__bold {
  font-weight: 700;
}

.footer__icons {
  grid-area: footer__icons;

  display: flex;
  gap: 20px;

  fill: var(--color-black);
}
@media (768px <= width) {
  .footer__icons {
    justify-self: end;
    align-self: center;
  }
}

.footer__icons--facebook,
.footer__icons--instagram,
.footer__icons--twitter {
  cursor: pointer;
}

.footer__icons--facebook:hover,
.footer__icons--instagram:hover,
.footer__icons--twitter:hover {
  fill: var(--color-orange);
}

